Fix header spacing with desktop-only fixed header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -70,8 +70,16 @@ body {
     }
 }
 
-/* Push page content down under fixed header on medium and up */
 @media (min-width: 992px) {
+
+    .fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+
     .header-container {
         padding-top: 164px;
     }
